k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-python-service
spec:
  type: ClusterIP
  selector:
    app: eks-python-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
